# liteboxd

./: .gitignore  AGENTS.md  Makefile  README.md  env.example
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci-gateway.yml  release-images.yml
api/: openapi.yaml
backend/: .gitignore  Dockerfile  Dockerfile.gateway  Dockerfile.launcher  go.mod  go.sum
deploy/: README.md  build.sh  gateway.yaml  rolling-upgrade.md  sandbox  system
deploy/sandbox/: networkpolicy-allow-internet-egress.yaml  networkpolicy-deny-k8s-api.yaml  rbac-gateway.yaml
deploy/scripts/: deploy-k8s.sh  port-forward-k8s.sh
deploy/system/: api-deployment.yaml  configmap.yaml  gateway-deployment.yaml  gateway-pdb.yaml  ingress.yaml  kustomization.yaml  traefik-middleware-retry.yaml  web-deployment.yaml
docs/: liteboxd-k3s-controlplane-hot-upgrade-design.md  network-access-guide.md
docs/auth/: design.md
docs/cli/: command-reference.md  design.md  quickstart.md
docs/code-interpreter-sandbox/: design.md
docs/container-login/: design.md
docs/liteboxd-oneclick-deploy/: design.md
docs/sandbox-metadata-management/: README.md  design.md  web-admin-query-design.md
docs/sandbox-network/: README.md  design.md  domain-whitelist-plan.md  egress-gateway-plan.md  implementation-plan.md  websocket-proxy-plan.md
docs/sandbox-persistence/: README.md  design.md  implementation-plan.md  quickstart.md  (+3 more)
liteboxd-cli/: README.md  go.mod  go.sum  main.go
sdk/python/: .gitignore  README.md  pyproject.toml  setup_venv.sh
sdk/python/examples/: async_example.py  quickstart.py  template_management.py
sdk/python/src/liteboxd/: __init__.py  _async_base.py  _base.py  _version.py  async_client.py  client.py  exceptions.py
sdk/python/src/liteboxd/models/: __init__.py  common.py  prepull.py  sandbox.py  template.py
sdk/python/src/liteboxd/services/: __init__.py  async_import_export.py  async_prepull.py  async_sandbox.py  async_template.py  import_export.py  prepull.py  sandbox.py  template.py
sdk/python/tests/: conftest.py  test_client.py  test_import_export.py  test_prepull.py  test_sandbox.py  test_template.py
templates/: code-interpreter-persistent.yml  code-interpreter.yml  nginx.yml
web/: Dockerfile  package-lock.json  package.json  vite.config.ts
(+204 files in other folders)
