[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liteboxd-sdk"
version = "0.1.0"
description = "Python SDK for LiteBoxd - A lightweight K8s sandbox system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "LiteBoxd Team" }
]
keywords = ["liteboxd", "sandbox", "kubernetes", "k8s", "container"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/fslongjin/liteboxd"
Documentation = "https://github.com/fslongjin/liteboxd/tree/master/docs/sdk/python"
Repository = "https://github.com/fslongjin/liteboxd"
Issues = "https://github.com/fslongjin/liteboxd/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/liteboxd"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["liteboxd"]
